# FsRpc

./: .gitignore  3  CMakeLists.txt  compile_commands.json  flake.nix  log
.cache/clangd/index/: main.cpp.FA50B4F27DBB0AC7.idx
client/: client.cpp  client.h  main.cpp
common/: file.h  file_client.cpp  file_client.h  file_server.cpp  file_server.h  stream.cpp  stream.h
server/: main.cpp  server.cpp  server.h
